--- a/templates/teacher_template/update_attendance.html
+++ b/templates/teacher_template/update_attendance.html
@@ -1,6 +1,6 @@
 {% extends 'teacher_template/base_template.html' %}
   {% block page_title %}
-    Take attendance
+    View and Update attendance
   {% endblock page_title %}
   {% block main_content %}
 <!-- Main content -->
@@ -12,7 +12,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Take Attendance</h3>
+                <h3 class="card-title">View and Update Attendance</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -27,11 +27,20 @@
                   </div>
                   <div class="form-group">
                     <label>Term</label>
-                    <select class="form-control" name="term" id="term">
-                        {% for term in terms %}
+                    <select class="form-control" name="term_id" id="term_id">
+                        {% for term in term_id %}
                             <option value="{{ term.id }}">{{ term.term_start }} To {{ term.term_end }}</option>
                         {% endfor %}
                     </select>
+                  </div>
+                  <div class="form-group">
+                    <label>Attendance date</label>
+                    <select class="form-control" name="attendance_date" id="attendance_date">
+
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <button type="button" class="btn btn-primary btn-block" id="fetch_attendance_data">Fetch Attendance Data</button>
                   </div>
                       <div class="form-group">
                         {% if messages %}
@@ -126,6 +135,7 @@
                   .fail(function(response){
                       alert("Error, Cannot save data")
                   })
+                  $("#fetch_attendance").click()
               })
           })
       })
