made a lot of changes in models, attendance and at random places

--- a/templates/headteacher_template/manage_students.html
+++ b/templates/headteacher_template/manage_students.html
@@ -31,6 +31,7 @@
                       <th>Reg. Number</th>
                       <th>First Name</th>
                       <th>last Name</th>
+                      <th>Date of Birth</th>
                       <th>Username</th>
                       <th>Email</th>
                       <th>Gender</th>
@@ -51,6 +52,7 @@
                       <td>{{ student.reg_number }}</td>
                       <td>{{ student.admin.first_name }}</td>
                       <td>{{ student.admin.last_name }}</td>
+                      <td>{{ student.date_of_birth }}</td>
                       <td>{{ student.admin.username }}</td>
                       <td>{{ student.admin.email }}</td>
                       <td>{{ student.gender }}</td>
