--- a/templates/headteacher_template/add_class_template.html
+++ b/templates/headteacher_template/add_class_template.html
@@ -23,7 +23,15 @@
                     <label>Class name</label>
                     <input type="text" class="form-control" name="grade" placeholder="Class Name">
                   </div>
-                      <div class="form-group">
+                  <div class="form-group">
+                    <label>Teacher</label>
+                    <select class="form-control" name="teacher">
+                        {% for teacher in teachers %}
+                            <option value="{{ teacher.admin.id }}">{{ teacher.admin.first_name }} {{ teacher.admin.last_name }}</option>
+                        {% endfor %}
+                    </select>
+                  </div>
+                    <div class="form-group">
                         {% if messages %}
                             {% for message in messages %}
                             {% if message.tags == 'error' %}
