--- a/templates/headteacher_template/attendance_tables.html
+++ b/templates/headteacher_template/attendance_tables.html
@@ -1,4 +1,4 @@
-{% extends 'teacher_template/base_template.html' %}
+{% extends 'headteacher_template/base_template.html' %}
 {% block page_title %}
 Take attendance
 {% endblock page_title %}
@@ -15,6 +15,36 @@ Take attendance
 						<h3 class="card-title">Take Attendance</h3>
 					</div>
 					<!-- /.card-header -->
+					<div class="card-body">
+						<div class="form-group">
+						  <label>Subject</label>
+						  <select class="form-control" name="subject" id="subject">
+							  {% for subject in subjects %}
+								  <option value="{{ subject.id }}">{{ subject.subject_name }}</option>
+							  {% endfor %}
+						  </select>
+						</div>
+						<div class="form-group">
+						  <label>Term</label>
+						  <select class="form-control" name="term" id="term">
+							  {% for term in terms %}
+								  <option value="{{ term.id }}">{{ term.term_start }} To {{ term.term_end }}</option>
+							  {% endfor %}
+						  </select>
+						</div>
+							<div class="form-group">
+							  {% if messages %}
+								  {% for message in messages %}
+								  {% if message.tags == 'error' %}
+								  <div class="alert alert-danger" style="margin-top:10px;">{{ message }}</div>
+								  {% endif %}
+								  {% if message.tags == 'success' %}
+								  <div class="alert alert-success" style="margin-top:10px;">{{ message }}</div>
+								  {% endif %}
+								  {% endfor %}
+							  {% endif %}
+						  </div>
+					  </div>
 					<!-- form start -->
 					<div class="row">
 						<div class="col-sm-12">
@@ -37,21 +67,21 @@ Take attendance
 								</thead>
 								<tbody>
 									<tr role="row" class="odd">
-										<td tabindex="0" class="sorting_1">Gecko</td>
+										<td tabindex="0" class="sorting_1">Number</td>
 										<td>Firefox 1.0</td>
 										<td>Win 98+ / OSX.2+</td>
 										<td>1.7</td>
 										<td>A</td>
 									</tr>
 									<tr role="row" class="even">
-										<td tabindex="0" class="sorting_1">Gecko</td>
+										<td tabindex="0" class="sorting_1">Reg. Number</td>
 										<td>Firefox 1.5</td>
 										<td>Win 98+ / OSX.2+</td>
 										<td>1.8</td>
 										<td>A</td>
 									</tr>
 									<tr role="row" class="odd">
-										<td tabindex="0" class="sorting_1">Gecko</td>
+										<td tabindex="0" class="sorting_1">DOB</td>
 										<td>Firefox 2.0</td>
 										<td>Win 98+ / OSX.2+</td>
 										<td>1.8</td>
