--- a/templates/teacher_template/attendance_table.html
+++ b/templates/teacher_template/attendance_table.html
@@ -1,11 +1,11 @@
 {% extends 'teacher_template/base_template.html' %}
-{% block page_title %}
-Take attendance
-{% endblock page_title %}
-{% block main_content %}
+  {% block page_title %}
+    Home
+  {% endblock page_title %}
+  {% block main_content %}
 <!-- Main content -->
-<section class="content">
-	<div class="container-fluid">
+    <section class="content">
+      <div class="container-fluid">
 		<div class="row">
 			<!-- left column -->
 			<div class="col-md-12">
@@ -16,6 +16,36 @@ Take attendance
 					</div>
 					<!-- /.card-header -->
 					<!-- form start -->
+					<div class="card-body">
+						<div class="form-group">
+						  <label>Subject</label>
+						  <select class="form-control" name="subject" id="subject">
+							  {% for subject in subjects %}
+								  <option value="{{ subject.id }}">{{ subject.subject_name }}</option>
+							  {% endfor %}
+						  </select>
+						</div>
+						<div class="form-group">
+						  <label>Term</label>
+						  <select class="form-control" name="term" id="term">
+							  {% for term in terms %}
+								  <option value="{{ term.id }}">{{ term.term_start }} To {{ term.term_end }}</option>
+							  {% endfor %}
+						  </select>
+						</div>
+							<div class="form-group">
+							  {% if messages %}
+								  {% for message in messages %}
+								  {% if message.tags == 'error' %}
+								  <div class="alert alert-danger" style="margin-top:10px;">{{ message }}</div>
+								  {% endif %}
+								  {% if message.tags == 'success' %}
+								  <div class="alert alert-success" style="margin-top:10px;">{{ message }}</div>
+								  {% endif %}
+								  {% endfor %}
+							  {% endif %}
+						  </div>
+					  </div>
 					<div class="row">
 						<div class="col-sm-12">
 							<table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid"
@@ -129,7 +159,6 @@ Take attendance
 			<!--/.col (right) -->
 		</div>
 		<div id="student_data" class="card-footer">
-
 		</div>
 	</div>
 </section>
@@ -221,4 +250,3 @@ Take attendance
 
 </script>
 {% endblock custom_js %}
-git 
