--- a/templates/teacher_template/sidebar_template.html
+++ b/templates/teacher_template/sidebar_template.html
@@ -34,8 +34,8 @@
             </a>
           </li>
           <li class="nav-item">
-            {% url 'take_attendance' as take_attendance %}
-            <a href="{{ take_attendance }}" class="nav-link {% if request.path == take_attendance %} active {% endif %}">
+            {% url 'new_attendance' as new_attendance %}
+            <a href="{{ new_attendance }}" class="nav-link {% if request.path == new_attendance %} active {% endif %}">
               <i class="nav-icon fas fa-plus-square"></i>
               <p>
                 Take Attendance
@@ -43,35 +43,16 @@
             </a>
           </li>
           <li class="nav-item">
-            {% url 'update_attendance_data' as update_attendance_data %}
-            <a href="{{ update_attendance_data }}" class="nav-link {% if request.path == update_attendance_data %} active {% endif %}">
+            {% url 'view_update_attendance' as view_update_attendance %}
+            <a href="{{ view_update_attendance }}" class="nav-link {% if request.path == view_update_attendance %} active {% endif %}">
               <i class="nav-icon fas fa-plus-square"></i>
               <p>
                 View / Update Attendance
               </p>
             </a>
           </li>
-          <li class="nav-item">
-            {% url 'attendance_table' as attendance_table %}
-            <a href="{{ attendance_table }}" class="nav-link {% if request.path == attendance_table %} active {% endif %}">
-              <i class="nav-icon fas fa-plus-square"></i>
-              <p>
-                second attendance_table
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            {% url 'new_attendance' as new_attendance %}
-            <a href="{{ new_attendance }}" class="nav-link {% if request.path == new_attendance %} active {% endif %}">
-              <i class="nav-icon fas fa-plus-square"></i>
-              <p>
-                New Attendance Table
-              </p>
-            </a>
-          </li>
         </ul>
       </nav>
-
       <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
