Finished the lesson notes module

--- a/templates/headteacher_template/sidebar_template.html
+++ b/templates/headteacher_template/sidebar_template.html
@@ -4,7 +4,7 @@
     <a href="{% url 'headteacher_home' %}" class="brand-link">
       <img src="{% static "dist/img/AdminLTELogo.png" %}" alt="SMS Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">Adakope M/A</span>
+      <span class="brand-text font-weight-light">SEM</span>
     </a>
 
     <!-- Sidebar -->
